Fix bottom margin on more stories section
This was cut off after removing the bottom margin from the generic card
component. Adding a bottom padding re-instates the correct spcaing.

--- a/app/webpacker/styles/stories.scss
+++ b/app/webpacker/styles/stories.scss
@@ -82,7 +82,7 @@
     padding: 2px;
 
     &.more-stories {
-        padding: 0 20px;
+        padding: 0 20px 20px 20px;
     }
 
     .story-card {
